initial css and navigation

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,16 +1,26 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+  color: white
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  background-color: black;
 }
+.cover-image {
+  height: 50%;
+}
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+main {
+  background-color: teal;
 }
 
 .App-header {
