--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Caudex&family=Italiana&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;1,100&display=swap');
+
 
 main {
 	margin: 0 auto;
@@ -28,6 +31,7 @@ main {
 html,
 body {
   min-height: 100%;
+  font-family: 'Italiana', serif;
 }
 
 body {
@@ -39,7 +43,9 @@ body {
   letter-spacing: .1em;
   background: var(--dark);
   color: var(--light);
-  font-family: 'Poiret One', cursive;
+  /* font-family: "Caudex", serif; */
+  /* font-family: 'Italiana', serif; */
+  font-family: "Lato", sans-serif;
 
 }
 
